fix spacing

--- a/css/city.css
+++ b/css/city.css
@@ -3,12 +3,15 @@
   flex-wrap: wrap;
   justify-content: start;
 }
+
 .user .avatar img {
   width: 32px;
   height: 32px;
   border-radius: 100%;
 }
+
 .user .user-name {
-  padding-left: 8px;
+  padding-left: 12px;
   padding-top: 4px;
+  font-size: 16px;
 }
